--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native-svg": "^13.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "eslint": "^8.30.0",
+    "eslint-plugin-react": "^7.31.11"
   },
   "private": true
 }
